--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Mohamed Alyahri</h1>
 							<p>Official Cydia Repo</p>
-						</header>
+						</header>
+
 						<footer>
 							<ul class="icons">
 								<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2FMohdAlyahri.github.io" class="fa-plus">Add Repo</a></li>
@@ -32,7 +33,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Your Bro: Mohamed Alyahri</li>
+							<li>&copy; Mohamed Alyahri</li>
 						</ul>
 					</footer>
 
