--- a/index.html
+++ b/index.html
@@ -1,52 +1,33 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>MohdAlyahri's Repo</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-loading">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<html><head><title>MohdAlyahri Repo</title>
+	<link rel="stylesheet" type="text/css" href="/cydia/menes.css"/>
+	<link rel="stylesheet" type="text/css" href="/cydia/style.css"/>
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
+    <style>
+      div.input{height:43px!important}
+      div.input div{margin-right:10px!important}
+      div.input input{width:200px!important;height:43px!important;background-color:transparent!important;margin-left:15px;padding-right:5px!important;margin-top:-15px!important;display:inline}
+      div.input strong{width:auto;font-size:17px;display:inline}
+      div.important{background:#FEE;-moz-border-radius-bottomleft:9px;-webkit-border-bottom-left-radius:9px;-moz-border-radius-bottomright:9px;-webkit-border-bottom-right-radius:9px;background-clip:padding-box}
+    </style>
+</head><body class="pinstripe modern">
+<panel>
 
-				<!-- Main -->
-					<section id="main">
-						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Mohamed Alyahri</h1>
-							<p>Official Cydia Repo</p>
-						</header>
+	<label>Setup Instructions</label>
+	<fieldset>
+        <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2FMohdAlyahri.github.io/"><img class="icon" src="https://cydia.saurik.com/icon/cydia.png"/><div><label>Add Source to Cydia</label></div></a>
+        <div style="background:#FEE">
+			<p>This repository contains beta software and is for testing purposes only!</p>
+		</div>
+	</fieldset>
+	
+	<fieldset>
+		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6552798">
+			<img class="icon" src="https://cache.saurik.com/cydia/icon/paypal.gif"/><div>
+			<label>Donate with PayPal</label>
+		</div></a>
+	</fieldset>
 
-						<footer>
-							<ul class="icons">
-								<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2FMohdAlyahri.github.io" class="fa-plus">Add Repo</a></li>
-							</ul>
-						</footer>
-					</section>
+</panel>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; Mohamed Alyahri</li>
-						</ul>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
-			<script>
-				if ('addEventListener' in window) {
-					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
-					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-				}
-			</script>
-
-	</body>
-</html>
+</body></html>
