--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <html><head><title>MohdAlyahri Repo</title>
 	<link rel="stylesheet" type="text/css" href="/cydia/menes.css"/>
+	<link rel="stylesheet" type="text/css" href="/cydia/style.css"/>
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
     <style>
       div.input{height:43px!important}
@@ -14,7 +14,7 @@
 
 	<label>Setup Instructions</label>
 	<fieldset>
-        <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2FMohdAlyahri.github.io/"><img class="icon" src="https://cydia.saurik.com/icon/cydia.png"/><div><label>Add Source to Cydia</label></div></a>
+        <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mohdalyahri.github.io"><img class="icon" src="https://cydia.saurik.com/icon/cydia.png"/><div><label>Add Source to Cydia</label></div></a>
         <div style="background:#FEE">
 			<p>This repository contains beta software and is for testing purposes only!</p>
 		</div>
@@ -29,8 +29,4 @@
 
 </panel>
 
-<<<<<<< HEAD
 </body></html>
-=======
-</body></html>
->>>>>>> fc8c1be13ba5a58a70f170f0812bba7624c2a8fb
