--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	
 	<fieldset>
 		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6552798">
-			<img class="icon" src="https://cache.saurik.com/cydia/icon/paypal.gif"/><div>
+			<img class="icon" src=""/><div>
 			<label>Donate with PayPal</label>
 		</div></a>
 	</fieldset>
