--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<div>
 						<div>
 							<label>
-								<p>inxtllr</p>
+								<p>SAQER ALYAHFEI</p>
 							</label>
 						</div>
 					</div>
@@ -94,7 +94,7 @@
 					<div>
 						<div>
 							<label>
-								<p>More...</p>
+								<p>D. MOHANAD...</p>
 							</label>
 						</div>
 					</div>
@@ -104,26 +104,26 @@
 				<p>Source Info</p>
 			</label>
 			<fieldset class="source">
-				<a href="twitter://user?screen_name=ithegentle">
+				<a href="https://t.me/joinchat/AZOihkNhghT5xv4sPcmLJQ">
 					<img class="icon" src="//cydia00.net/repo/CydiaIcon.png" />
 					<div>
 						<div>
 							<label>
 								<p id="source-name">
-									محمد اليافعي								</p>
+									Jailbreak Group on Telegram								</p>
 							</label>
 						</div>
 					</div>
 				</a>
 				<div class="source-description" id="source-description">
-					<p>سورس خاص لقروب الجليبريك</p>
+					<p>to add out grpout just click on the top</p>
 				</div>
 			</fieldset>
 			<footer id="footer" style="display: none;">
 				<p>
 					<span id="id">Index</span>
 					<br />
-					<span class="source-name">محمد اليافعي</span>·
+					<span class="source-name">MOHD ALYAHRI</span>·
 					<span id="section">Copyright &copy; 2017-2018</span>
 									</p>
 			</footer>
