--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 				<div>
 					<div style="float: right; vertical-align: middle; text-align: center; width: 200px">
 						<span style="font-size: 24px">
-							محمد اليافعي						</span>
+							سورس خاص بقروب الجليبريك						</span>
 						<br/>
 						<span style="font-size: 16px">
-							<a class="panel" href="AUTOFILL_SITE">محمد اليافعي</a>
+							<a class="panel" href="AUTOFILL_SITE">تم اطلاقه 29/7/2018</a>
 							<br />
-							<a class="panel" href="mailto:AUTOFILL_EMAIL">AUTOFILL_EMAIL</a>
+							<a class="panel" href="mailto:AUTOFILL_EMAIL">mohdalyahri@gmail.com</a>
 						</span>
 					</div>
 					<img class="icon" src="CydiaIcon.png" style="width:64px; height:64px; vertical-align: top;" />
@@ -77,14 +77,14 @@
 				</a>
 
 			</fieldset>
-		<label><p>Applications</p></label>
+		<label><p>Devlopers!</p></label>
 			<fieldset>
 				<a href="//cydia00.net/repo/index.php?method=view&amp;pid=193">
 					<img class="icon" src="//cydia00.net/repo/icon/icon.png">
 					<div>
 						<div>
 							<label>
-								<p>SAQER ALYAHFEI</p>
+								<p>SA8ER ALYAF3I</p>
 							</label>
 						</div>
 					</div>
@@ -121,9 +121,9 @@
 			</fieldset>
 			<footer id="footer" style="display: none;">
 				<p>
-					<span id="id">Index</span>
+					<span id="id">our Love!</span>
 					<br />
-					<span class="source-name">MOHD ALYAHRI</span>·
+					<span class="source-name">MOHD ALYAHRI</span>
 					<span id="section">Copyright &copy; 2017-2018</span>
 									</p>
 			</footer>
