--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 			<fieldset>
 				<div>
 					<div style="float: right; vertical-align: middle; text-align: center; width: 200px">
-						<span style="font-size: 24px">
+						<span style="font-size: 19px">
 							سورس خاص بقروب الجليبريك						</span>
 						<br/>
 						<span style="font-size: 16px">
 							<a class="panel" href="AUTOFILL_SITE">تم اطلاقه 29/7/2018</a>
 							<br />
-							<a class="panel" href="mailto:AUTOFILL_EMAIL">mohdalyahri@gmail.com</a>
+							<a class="panel" href="mailto:AUTOFILL_EMAIL"></a>
 						</span>
 					</div>
 					<img class="icon" src="CydiaIcon.png" style="width:64px; height:64px; vertical-align: top;" />
@@ -59,9 +59,9 @@
 			</fieldset>
 			<block>
 				<p>
-					<strong>110</strong> packages in total.				</p>
+					<strong>2</strong> packages in total.				</p>
 								<p>
-					Last updated: <strong>2018-07-25 02:04:12</strong>				</p>
+					Last updated: <strong>2018-07-29 06:15:03</strong>				</p>
 							</block>
 			<fieldset>
 				<a href="https://paypal.me/" target="_blank">
