--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<div>
 						<div>
 							<label>
-								<p>SA8ER ALYAF3I</p>
+								<p>    SA8ER ALYAF3I</p>
 							</label>
 						</div>
 					</div>
@@ -89,7 +89,7 @@
 					<div>
 						<div>
 							<label>
-								<p>D. MOHANAD...</p>
+								<p>     D. MOHANAD...</p>
 							</label>
 						</div>
 					</div>
@@ -115,10 +115,10 @@
 			</fieldset>
 			<footer id="footer" style="display: none;">
 				<p>
-					<span id="id">our Love!</span>
+					<span id="id">Our Love!</span>
 					<br />
 					<span id="section">Copyright &copy; 2017-2018</span>
-					<span class="source-name">MOHD ALYAHRI</span>
+					<span class="source-name">Mohd Alyahri</span>
 					
 									</p>
 			</footer>
