--- a/index.html
+++ b/index.html
@@ -1,128 +1,53 @@
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<title>سورس محمد اليافعي</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta name="apple-mobile-web-app-title" content="محمد اليافعي" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<meta name="HandheldFriendly" content="true" />
-		<meta name="format-detection" content="telephone=no" />
-		<meta name="robots" content="index, follow" />
-		<meta name="title" content="hussen" />
-		<meta name="description" content="سورس لقروب الجليبريك" />
-		<base target="_top">
-		<link rel="apple-touch-icon" href="//cydia00.net/repo/CydiaIcon.png">
-		<link rel="shortcut icon" href="//cydia00.net/repo/favicon.ico">
-		<link rel="stylesheet" href="//cydia00.net/repo/css/menes.min.css">
-		<link rel="stylesheet" href="//cydia00.net/repo/css/scroll.min.css">
-		<script src="//cydia00.net/repo/js/fastclick.js" type="text/javascript"></script>
-		<script src="//cydia00.net/repo/js/menes.js" type="text/javascript"></script>
-		<script src="//cydia00.net/repo/js/cytyle.js" type="text/javascript"></script>
-		<script src="//cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
-	</head>
-	<body class="pinstripe">
-		<panel>
-			<fieldset>
-				<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://mohdalyahri.github.io" target="_blank">
-				<img class="icon" src="//cydia00.net/repo/icon/default/cydia.png" />
-					<div>
-						<div>
-							<label>
-								<p>
-									Add in Cydia<sup><small>™</small></sup>								</p>
-							</label>
-						</div>
-					</div>
-				</a>
-			</fieldset>
-			<fieldset>
-				<div>
-					<div style="float: right; vertical-align: middle; text-align: center; width: 200px">
-						<span style="font-size: 19px">
-							سورس خاص بقروب الجليبريك						</span>
-						<br/>
-						<span style="font-size: 16px">
-							<a class="panel" href="AUTOFILL_SITE">تم اطلاقه 29/7/2018</a>
-							<br />
-							<a class="panel" href="mailto:AUTOFILL_EMAIL"></a>
-						</span>
-					</div>
-					<img class="icon" src="CydiaIcon.png" style="width:64px; height:64px; vertical-align: top;" />
-					<hr />
-					<p>
-						Add this URL via Cydia<sup><small>™</small></sup>: 						<br />
-						<strong><a href="mohdalyahri.github.io/">http://mohdalyahri.github.io/</a></strong>
-					</p>
-				</div>
-			</fieldset>
-			<block>
-				<p>
-					<strong>2</strong> packages in total.				</p>
-								<p>
-					Last updated: <strong>2018-07-29 06:15:03</strong>				</p>
-							</block>
-			<fieldset>
-				<a href="https://paypal.me/" target="_blank">
-				<img class="icon" src="//cydia00.net/repo/icon/default/paypal.png" />
-					<div>
-						<div>
-							<label>
-								<p>
-									Donate via <span style="font-style: italic; font-weight: bold"><span style="color: #1a3665">Pay</span><span style="color: #32689a">Pal</span><sup><small>™</small></sup></span>								</p>
-							</label>
-						</div>
-					</div>
-				</a>
-
-			</fieldset>
-		<label><p>Devlopers!</p></label>
-			<fieldset>
-					<div>
-						<div>
-							<label>
-								<p>               SA8ER ALYAF3I</p>
-							</label>
-						</div>
-					</div>
-				</a>
-					<div>
-						<div>
-							<label>
-								<p>                 D. MOHANAD...</p>
-							</label>
-						</div>
-					</div>
-				</a>
-			</fieldset>
-			<label class="source">
-				<p>Source Info</p>
-			</label>
-			<fieldset class="source">
-				<a href="https://t.me/joinchat/AZOihkNhghT5xv4sPcmLJQ">
-					<div>
-						<div>
-							<label>
-								<p id="source-name">
-									Jailbreak Group on Telegram								</p>
-							</label>
-						</div>
-					</div>
-				</a>
-				<div class="source-description" id="source-description">
-					<p>to add out grpout just click on the top</p>
-				</div>
-			</fieldset>
-			<footer id="footer" style="display: none;">
-				<p>
-					<span id="id">Our Love!</span>
-					<br />
-					<span id="section">Copyright &copy; 2017-2018</span>
-					<span class="source-name">Mohd Alyahri</span>
-					
-									</p>
-			</footer>
-		</panel>
-		<script src="//cydia00.net/repo/js/main.js" type="text/javascript"></script>
-	</body>
-</html>
+<!DOCTYPE html>
+<html><head>
+<title>قروب - الجليبريك</title>
+<link rel='stylesheet' type='text/css' href='ios7.css'/>
+<meta name='viewport' content='width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;'/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<script src="jquery-3.2.1.min.js"></script>
+<script src="description.js?_=4654654"></script>
+<body>
+<h2>Jailbreak Group's Repo</h2>
+<ul>
+	<li>
+		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://mohdalyahri.github.io/">
+			<img class="icon" src="cydia7.png"/>
+			Open Cydia</label>
+		</a>
+	</li>
+</ul>
+<p style="text-align:center;">Repo: http://mohdalyahri.github.io/</p>
+<h2>للمساعدة</h2>
+<ul>
+	<li>
+		<a href="https://www.paypal.me/" target="_blank">
+			<img class="icon" src="pp.png"/>
+			<label>تبرع</label>
+		</a>
+	</li>
+</ul>
+<h2>تجدنا هنا</h2>
+<ul>
+	<li>
+		<a href="https://github.com/mohdalyahri" target="_blank">
+			<img class="icon" src="github.png"/>
+			<label>GitHub</label>
+		</a>
+	</li>
+	<li>
+		<a href="https://www.reddit.com/user/compaq99" target="_blank">
+			<img class="icon" src="reddit.png"/>
+			<label>Reddit</label>
+		</a>
+	</li>
+	<li>
+		<a href="https://twitter.com/mohdalyahri" target="_blank">
+			<img class="icon" src="twitter.png"/>
+			<label>Follow us</label>
+		</a>
+	</li>
+</ul>
+<p style="text-align:center;">Jailbreak Group's © 2018</p>
+</body></html>
