--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html><head>
-<title>قروب - الجليبريك</title>
+<title>julioverne's Repo</title>
 <link rel='stylesheet' type='text/css' href='ios7.css'/>
 <meta name='viewport' content='width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;'/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -9,45 +9,45 @@
 <script src="jquery-3.2.1.min.js"></script>
 <script src="description.js?_=4654654"></script>
 <body>
-<h2>Jailbreak Group's Repo</h2>
+<h2>julioverne's Repo</h2>
 <ul>
 	<li>
-		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://mohdalyahri.github.io/">
+		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://julioverne.github.io/">
 			<img class="icon" src="cydia7.png"/>
 			Open Cydia</label>
 		</a>
 	</li>
 </ul>
-<p style="text-align:center;">Repo: http://mohdalyahri.github.io/</p>
-<h2>للمساعدة</h2>
+<p style="text-align:center;">Repo: http://julioverne.github.io/</p>
+<h2>Help Us</h2>
 <ul>
 	<li>
-		<a href="https://www.paypal.me/" target="_blank">
+		<a href="https://www.paypal.me/julioverne" target="_blank">
 			<img class="icon" src="pp.png"/>
-			<label>تبرع</label>
+			<label>Donate</label>
 		</a>
 	</li>
 </ul>
-<h2>تجدنا هنا</h2>
+<h2>Social</h2>
 <ul>
 	<li>
-		<a href="https://github.com/mohdalyahri" target="_blank">
+		<a href="https://github.com/julioverne" target="_blank">
 			<img class="icon" src="github.png"/>
 			<label>GitHub</label>
 		</a>
 	</li>
 	<li>
-		<a href="https://www.reddit.com/user/compaq99" target="_blank">
+		<a href="https://www.reddit.com/user/julioverne" target="_blank">
 			<img class="icon" src="reddit.png"/>
 			<label>Reddit</label>
 		</a>
 	</li>
 	<li>
-		<a href="https://twitter.com/mohdalyahri" target="_blank">
+		<a href="https://twitter.com/iJulioVerne" target="_blank">
 			<img class="icon" src="twitter.png"/>
-			<label>Follow us</label>
+			<label>Follow julioverne</label>
 		</a>
 	</li>
 </ul>
-<p style="text-align:center;">Jailbreak Group's © 2018</p>
+<p style="text-align:center;">julioverne © 2018</p>
 </body></html>
