--- a/bloard_0.1.2-1/index.html
+++ b/bloard_0.1.2-1/index.html
@@ -1,33 +1,60 @@
-<html>
-<head>
-    <title>Bloard</title>
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
-    <base target="_blank"/>
-    <script src="../../assets/js/ios.js"></script>
-</head>
+<!DOCTYPE html>
+<html >
+  <head>
+    <meta charset="UTF-8">
+    <title>Cydia Package Depiction</title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
 
-<body class="pinstripe">
-    <panel>
-        <fieldset class="iosver">
-            <div data-min-ios="8.0" data-max-ios="11.3.1" class="prerequisite">
-                <p>Compatible with iOS 8.0 - 11.3.1</p>
-            </div>
-        </fieldset>
-    <label>Description</label>
-        <fieldset>
-            <div>
-            <p>Universal dark keyboard.</p>
-            </div>
-        </fieldset>
-    <label>Latest Changes</label>
-        <fieldset>
-            <div><div><label>
-            <p>1.1.1: Recompiled</p>
-            <p>1.1: iOS 10 support</p>
-            </label></div></div>
-        </fieldset>
-    <script src="../../misc/developer.js"></script>
-</panel>
-<script src="../../misc/iosver.js" async></script>
+
+
+        <link rel="stylesheet" href="css/style.css">
+
+
+
+
+  </head>
+
+  <body>
+
+    <body class="depiction">
+  <header>
+    <h1>Cydia Package</h1>
+  </header>
+  <main id="content" role="main">
+    <ul>
+      <li>
+        This is a descriptive text box. Put your description in here.</p>
+      </li>
+      <li>
+        This is another box of text. You can put what ever info you want in here.
+      </li>
+    </ul>
+    <h2 id="in-this-version">In this version</h2>
+    <ul>
+      <li>
+        <p>1.0</p><br>
+
+        <p>- New option for respring logo.</p>
+          <p>- Fixed really big calender date.</p>
+          <p>- Added Safari icon.</p>
+          <p>- Added Mail icon.</p>
+          <p>- Added Music icon.</p>
+          <p>- Added FaceTime icon.</p>
+          <p>- Fixed Depiction.</p>
+      </li>
+    </ul>
+    <h2 id="known-issues">Known&nbsp;Issues</h2>
+    <ul>
+      <li>No current issues.</li>
+    </ul>
+    <p class="footer">Report issues to /u/redditusername.</p>
+  </main>
 </body>
+
+        <script src="js/index.js"></script>
+
+
+
+
+  </body>
 </html>
