--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</a>
 	</li>
 </ul>
-<p style="text-align:center;">اعزائي اعضاء المجموعة السورس الى الان مازال تحت التجربة نرجو عدم استخدامه كمرجع اساسي//</p>
+<p style="text-align:center;">اعزائي اعضاء المجموعة السورس الى الان مازال تحت التجربة نرجو عدم استخدامه كمرجع اساسي</p>
 <h2>للمساعدة</h2>
 <ul>
 	<li>
@@ -33,19 +33,19 @@
 	<li>
 		<a href="https://github.com/mohdalyahri" target="_blank">
 			<img class="icon" src="github.png"/>
-			<label>GitHub</label>
+			<label>GitHub منصة</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://www.reddit.com/user/compaq99" target="_blank">
 			<img class="icon" src="reddit.png"/>
-			<label>Reddit</label>
+			<label>Reddit مجتمع</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://twitter.com/mohdalyahri" target="_blank">
 			<img class="icon" src="twitter.png"/>
-			<label>Follow us</label>
+			<label>تابعنا على تويتر</label>
 		</a>
 	</li>
 </ul>
