--- a/index.html
+++ b/index.html
@@ -1,53 +1,20 @@
-
-<!DOCTYPE html>
-<html><head>
-<title>قروب - الجليبريك</title>
-<link rel='stylesheet' type='text/css' href='ios7.css'/>
-<meta name='viewport' content='width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;'/>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<script src="jquery-3.2.1.min.js"></script>
-<script src="description.js?_=4654654"></script>
-<body>
-<h2>للإضافة السريعة</h2>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p></p>
+<h2 style="text-align: right;">للإضافة السريعة</h2>
 <ul>
-	<li>
-		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://.github.io/">
-			<img class="icon" src="cydia7.png"/>
-			ضيفنا عالسريع لاتضيع وقت</label>
-		</a>
-	</li>
+<li><img class="icon" style="float: right;" src="cydia7.png" /></li>
 </ul>
-<p style="text-align:center;">اعزائي اعضاء المجموعة السورس الى الان مازال تحت التجربة نرجو عدم استخدامه كمرجع اساسي</p>
-<h2>للمساعدة</h2>
-<ul>
-	<li>
-		<a href="https://www.paypal.me/" target="_blank">
-			<img class="icon" src="pp.png"/>
-			<label>تبرع لنا بنص دولار</label>
-		</a>
-	</li>
+<p style="direction: rtl;"><a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://.github.io/">ضيفنا عالسريع لاتضيع وقت</a></p>
+<p style="text-align: center;">اعزائي اعضاء المجموعة السورس الى الان مازال تحت التجربة نرجو عدم استخدامه كمرجع اساسي</p>
+<h2 style="text-align: right;">للمساعدة</h2>
+<ul style="text-align: right;">
+<li style="text-align: right;"><a href="https://www.paypal.me/" target="_blank" rel="noopener"> <img class="icon" style="float: right;" src="pp.png" /> <label>تبرع لنا بنص دولار</label> </a></li>
 </ul>
-<h2>تابعنا</h2>
-<ul>
-	<li>
-		<a href="https://github.com/mohdalyahri" target="_blank">
-			<img class="icon" src="github.png"/>
-			<label>GitHub منصة</label>
-		</a>
-	</li>
-	<li>
-		<a href="https://www.reddit.com/user/compaq99" target="_blank">
-			<img class="icon" src="reddit.png"/>
-			<label>Reddit مجتمع</label>
-		</a>
-	</li>
-	<li>
-		<a href="https://twitter.com/mohdalyahri" target="_blank">
-			<img class="icon" src="twitter.png"/>
-			<label>تابعنا على تويتر</label>
-		</a>
-	</li>
+<h2 style="text-align: right;">تابعنا</h2>
+<ul style="text-align: right;">
+<li style="text-align: right;"><a href="https://github.com/mohdalyahri" target="_blank" rel="noopener"> <img class="icon" src="github.png" /> <label>GitHub منصة</label> </a></li>
+<li style="text-align: right;"><a href="https://www.reddit.com/user/compaq99" target="_blank" rel="noopener"> <img class="icon" src="reddit.png" /> <label>Reddit مجتمع</label> </a></li>
+<li style="text-align: right;"><a href="https://twitter.com/mohdalyahri" target="_blank" rel="noopener"> <img class="icon" src="twitter.png" /> <label>تابعنا على تويتر</label> </a></li>
 </ul>
-<p style="text-align:center;">جميع الحقوق مسروقه © 2018</p>
-</body></html>
+<p style="text-align: center;">جميع الحقوق مسروقه &copy; 2018</p>
