--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html dir="rtl" lang="ar">
+<html dir="rtl">
 <head>
 <title>قروب - الجليبريك</title>
 <link rel='stylesheet' type='text/css' href='ios7.css'/>
