--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<li>
 		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://.github.io/">
 			<img class="icon" src="cydia7.png"/>
-			   ضيفنا عالسريع لاتضيع وقت</label>
+			.    ضيفنا عالسريع لاتضيع وقت</label>
 		</a>
 	</li>
 </ul>
@@ -25,7 +25,7 @@
 	<li>
 		<a href="https://www.paypal.me/" target="_blank">
 			<img class="icon" src="pp.png"/>
-			<label>   تبرع لنا بنص دولار</label>
+			<label>.    تبرع لنا بنص دولار</label>
 		</a>
 	</li>
 </ul>
@@ -34,19 +34,19 @@
 	<li>
 		<a href="https://github.com/mohdalyahri" target="_blank">
 			<img class="icon" src="github.png"/>
-			<label>   GitHub منصة</label>
+			<label>.    GitHub منصة</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://www.reddit.com/user/compaq99" target="_blank">
 			<img class="icon" src="reddit.png"/>
-			<label>   Reddit مجتمع</label>
+			<label>.    Reddit مجتمع</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://twitter.com/mohdalyahri" target="_blank">
 			<img class="icon" src="twitter.png"/>
-			<label>   تابعنا على تويتر</label>
+			<label>.    تابعنا على تويتر</label>
 		</a>
 	</li>
 </ul>
