--- a/index.html
+++ b/index.html
@@ -34,19 +34,25 @@
 	<li>
 		<a href="https://github.com/mohdalyahri" target="_blank">
 			<img class="icon" src="github.png"/>
-			<label>.    GitHub منصة</label>
+			<label>منصة GitHub</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://www.reddit.com/user/compaq99" target="_blank">
 			<img class="icon" src="reddit.png"/>
-			<label>.    Reddit مجتمع</label>
+			<label>مجتمع Reddit</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://twitter.com/mohdalyahri" target="_blank">
 			<img class="icon" src="twitter.png"/>
-			<label>.    تابعنا على تويتر</label>
+			<label>تابعنا على تويتر</label>
+		</a>
+	</li>
+	<li>
+		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
+			<img class="icon" src="telegram.png"/>
+			<label>قروب التلجرام</label>
 		</a>
 	</li>
 </ul>
