--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<li>
 		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://.github.io/">
 			<img class="icon" src="cydia7.png"/>
-			.    ضيفنا عالسريع لاتضيع وقت</label>
+			.   ضيفنا عالسريع لاتضيع وقت</label>
 		</a>
 	</li>
 </ul>
@@ -25,34 +25,34 @@
 	<li>
 		<a href="https://www.paypal.me/" target="_blank">
 			<img class="icon" src="pp.png"/>
-			<label>.    تبرع لنا بنص دولار</label>
+			<label>.   تبرع لنا بنص دولار</label>
 		</a>
 	</li>
 </ul>
 <h2>تابعنا</h2>
 <ul>
-	<li>
-		<a href="https://github.com/mohdalyahri" target="_blank">
-			<img class="icon" src="github.png"/>
-			<label>منصة GitHub</label>
-		</a>
-	</li>
-	<li>
-		<a href="https://www.reddit.com/user/compaq99" target="_blank">
-			<img class="icon" src="reddit.png"/>
-			<label>مجتمع Reddit</label>
+    <li>
+		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
+			<img class="icon" src="telegram.png"/>
+			<label>.   اسعدنا بوجودك معنا بقروب الحلبريك</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://twitter.com/mohdalyahri" target="_blank">
 			<img class="icon" src="twitter.png"/>
-			<label>تابعنا على تويتر</label>
+			<label>.   تابعنا على تويتر</label>
 		</a>
 	</li>
 	<li>
-		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
-			<img class="icon" src="telegram.png"/>
-			<label>قروب التلجرام</label>
+		<a href="https://github.com/mohdalyahri" target="_blank">
+			<img class="icon" src="github.png"/>
+			<label>.   منصة GitHub</label>
+		</a>
+	</li>
+	<li>
+		<a href="https://www.reddit.com/user/compaq99" target="_blank">
+			<img class="icon" src="reddit.png"/>
+			<label>.   مجتمع Reddit</label>
 		</a>
 	</li>
 </ul>
