--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <li>
 		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
 			<img class="icon" src="telegram.png"/>
-			<label>.   اسعدنا بوجودك معنا بقروب الحلبريك</label>
+			<label>.   اسعدنا بوجودك معنا بقروب الجلبريك</label>
 		</a>
 	</li>
 	<li>
