--- a/index.html
+++ b/index.html
@@ -49,5 +49,5 @@
 		</a>
 	</li>
 </ul>
-<p style="text-align:center;">جميع الحقوق مسروقه © 2018</p>
+<p style="text-align:center;">نعمل بحب من اجلكم ❤️ © 2018</p>
 </body></html>
