--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <script src="jquery-3.2.1.min.js"></script>
 <script src="description.js?_=4654654"></script>
 <body>
-<h2>للإضافة السريعة</h2>
+<h2> ..للإضافة السريعة</h2>
 <ul>
 	<li>
 		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://.github.io/">
 			<img class="icon" src="cydia7.png"/>
-			&nbsp;&nbsp;&nbsp;<label>ضيفنا عالسريع لاتضيع وقت</label>
+			&nbsp;&nbsp;&nbsp;<label>ريع لاتضيع وقت</label>
 		</a>
 	</li>
 </ul>
@@ -25,16 +25,16 @@
 	<li>
 		<a href="https://www.paypal.me/" target="_blank">
 			<img class="icon" src="pp.png"/>
-			&nbsp;&nbsp;&nbsp;<label>تبرع لنا بنص دولار</label>
+			&nbsp;&nbsp;&nbsp;<label> بنص دولار</label>
 		</a>
 	</li>
 </ul>
-<h2>تابعنا</h2>
+<h2>..تابعنا</h2>
 <ul>
     <li>
 		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
 			<img class="icon" src="telegram.png"/>
-			&nbsp;&nbsp;&nbsp;<label>اسعدنا بوجودك معنا بقروب الجلبريك</label>
+			&nbsp;&nbsp;&nbsp;<label>قروب - الجليبريك</label>
 		</a>
 	</li>
 	<li>
