--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 	<li>
 		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://.github.io/">
 			<img class="icon" src="cydia7.png"/>
-			&nbsp;&nbsp;&nbsp;<label>ريع لاتضيع وقت</label>
+			&nbsp;&nbsp;&nbsp;<label>إضف للسيديا</label>
 		</a>
 	</li>
 </ul>
 <p style="text-align:center;">اعزائي اعضاء المجموعة السورس الى الان مازال تحت التجربة نرجو عدم استخدامه كمرجع اساسي</p>
-<h2>للمساعدة</h2>
+<h2> .. للمساعدة</h2>
 <ul>
 	<li>
 		<a href="https://www.paypal.me/" target="_blank">
 			<img class="icon" src="pp.png"/>
-			&nbsp;&nbsp;&nbsp;<label> بنص دولار</label>
+			&nbsp;&nbsp;&nbsp;<label>تبرع لنا</label>
 		</a>
 	</li>
 </ul>
