--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="jquery-3.2.1.min.js"></script>
 <script src="description.js?_=4654654"></script>
 <body>
-<h2> ..للإضافة السريعة</h2>
+<h2> للإضافة السريعة ..</h2>
 <ul>
 	<li>
 		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://.github.io/">
@@ -20,7 +20,7 @@
 	</li>
 </ul>
 <p style="text-align:center;">اعزائي اعضاء المجموعة السورس الى الان مازال تحت التجربة نرجو عدم استخدامه كمرجع اساسي</p>
-<h2> .. للمساعدة</h2>
+<h2>للمساعدة .. </h2>
 <ul>
 	<li>
 		<a href="https://www.paypal.me/" target="_blank">
@@ -29,7 +29,7 @@
 		</a>
 	</li>
 </ul>
-<h2>..تابعنا</h2>
+<h2>تابعنا .. </h2>
 <ul>
     <li>
 		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
