--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h2>للمساعدة .. </h2>
 <ul>
 	<li>
-		<a href="https://www.paypal.me/" target="_blank">
+		<a href="https://www.paypal.me/MohdAlyahri" target="_blank">
 			<img class="icon" src="pp.png"/>
 			&nbsp;&nbsp;&nbsp;<label>تبرع لنا</label>
 		</a>
