--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 </ul>
 <p style="text-align:center;">اعزائي اعضاء المجموعة السورس الى الان مازال تحت التجربة نرجو عدم استخدامه كمرجع اساسي</p>
 <ul>
-    <li>
+    <p>
 		<a 
 		  &nbsp;&nbsp;&nbsp;<label>قروب - الجليبريك</label>
 		</a>
-	</li>
+	</p>
 </ul>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -37,7 +37,7 @@
 <p>&nbsp;</p>
 <h2>تابعنا .. </h2>
 <ul>
-    <li>
+    <li style="list-style: none;padding:0px;margin:0px">
 		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
 			<img class="icon" src="telegram.png"/>
 			&nbsp;&nbsp;&nbsp;<label>قروب - الجليبريك</label>
@@ -49,9 +49,6 @@
 			&nbsp;&nbsp;&nbsp;<label>تابعنا على تويتر</label>
 		</a>
 	</li>
-</ul>
-<h2>للمساعدة .. </h2>
-<ul>
 	<li>
 		<a href="https://www.paypal.me/MohdAlyahri" target="_blank">
 			<img class="icon" src="pp.png"/>
