--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		</a>
 	</li>
 </ul>
-<p style="text-align:center;">اعزائي اعضاء المجموعة السورس الى الان مازال تحت التجربة نرجو عدم استخدامه كمرجع اساسي</p>
+<p style="text-align:center;">اعئي اعضاء المجموعة السورس الى الان مازال تحت التجربة نرجو عدم استخدامه كمرجع اساسي</p>
+<p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
