--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<h2>تابعنا .. </h2>
+<h2>تجدنا هنا .. </h2>
 <ul>
     <li style="list-style: none;padding:0px;margin:0px">
 		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
