--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-
 <!DOCTYPE html>
-<html dir="rtl">
-<head>
+<html dir="rtl"><head>
 <title>قروب - الجليبريك</title>
 <link rel='stylesheet' type='text/css' href='ios7.css'/>
 <meta name='viewport' content='width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;'/>
@@ -52,7 +50,7 @@
 <p>&nbsp;</p>
 <h2>تجدنا هنا .. </h2>
 <ul>
-    <li style="list-style: none;padding:0px;margin:0px">
+    <li>
 		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
 			<img class="icon" src="telegram.png"/>
 			&nbsp;&nbsp;&nbsp;<label>قروب - الجليبريك</label>
