--- a/description.html
+++ b/description.html
@@ -19,33 +19,24 @@
 <span id="desc_long_" hidden><h2>الوصف</h2><ul><li><p id="desc_long"></p></li></ul></span>
 <span id="screenshot_" hidden><h2>صورة الاداة</h2><ul><li><p id="screenshot"></p></li></ul></span>
 <span id="changelog_" hidden><h2>التغييرات</h2><ul><li><p id="changelog"></p></li></ul></span>
-<h2>للدعم</h2>
-<ul>
-	<li>
-		<a href="https://www.paypal.me/MohdAlyahri" target="_blank">
-			<img class="icon" src="pp.png"/>
-			<label>تبرع لنا</label>
-		</a>
-	</li>
-</ul>
 <h2>تجدنا هنا</h2>
 <ul>
     <li>
 		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
 			<img class="icon" src="telegram.png"/>
-			&nbsp;&nbsp;&nbsp;<label>قروب - الجليبريك</label>
+			<label>قروب - الجليبريك</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://twitter.com/mohdalyahri" target="_blank">
 			<img class="icon" src="twitter.png"/>
-			&nbsp;&nbsp;&nbsp;<label>تابعنا على تويتر</label>
+			<label>تابعنا على تويتر</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://www.paypal.me/MohdAlyahri" target="_blank">
 			<img class="icon" src="pp.png"/>
-			&nbsp;&nbsp;&nbsp;<label>تبرع لنا</label>
+			<label>تبرع لنا</label>
 		</a>
 	</li>
 </ul>
