--- a/description.html
+++ b/description.html
@@ -24,19 +24,19 @@
     <li>
 		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
 			<img class="icon" src="telegram.png"/>
-			<label>قروب - الجليبريك</label>
+			&emsp;<label>قروب - الجليبريك</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://twitter.com/mohdalyahri" target="_blank">
 			<img class="icon" src="twitter.png"/>
-			<label>تابعنا على تويتر</label>
+			&emsp;<label>تابعنا على تويتر</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://www.paypal.me/MohdAlyahri" target="_blank">
 			<img class="icon" src="pp.png"/>
-			<label>تبرع لنا</label>
+			&emsp;<label>تبرع لنا</label>
 		</a>
 	</li>
 </ul>
