--- a/index.html
+++ b/index.html
@@ -13,56 +13,30 @@
 	<li>
 		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://.github.io/">
 			<img class="icon" src="cydia7.png"/>
-			&nbsp;&nbsp;&nbsp;<label>إضف للسيديا</label>
+			&emsp;<label>إضف للسيديا</label>
 		</a>
 	</li>
 </ul>
 <p style="text-align:center;">اعزائي اعضاء المجموعة السورس الى الان مازال تحت التجربة نرجو عدم استخدامه كمرجع اساسي</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+
 <h2>تجدنا هنا .. </h2>
 <ul>
     <li>
 		<a href="tg://join?invite=FWP94ENhghQcjXUWuT_pqQ" target="_blank">
 			<img class="icon" src="telegram.png"/>
-			&nbsp;&nbsp;&nbsp;<label>قروب - الجليبريك</label>
+			&emsp;<label>قروب - الجليبريك</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://twitter.com/mohdalyahri" target="_blank">
 			<img class="icon" src="twitter.png"/>
-			&nbsp;&nbsp;&nbsp;<label>تابعنا على تويتر</label>
+			&emsp;<label>تابعنا على تويتر</label>
 		</a>
 	</li>
 	<li>
 		<a href="https://www.paypal.me/MohdAlyahri" target="_blank">
 			<img class="icon" src="pp.png"/>
-			&nbsp;&nbsp;&nbsp;<label>تبرع لنا</label>
+			&emsp;<label>تبرع لنا</label>
 		</a>
 	</li>
 </ul>
