--- a/description.html
+++ b/description.html
@@ -8,8 +8,7 @@
 <script src="jquery-3.2.1.min.js"></script>
 <script src="description.js?_=4654659"></script>
 <body onload="loadPackageInfo()">
-<span id="showAddRepo_" hidden><h2>سورس قروب - الجلبريك</h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mohdalyahri.github.io/"><img class="icon" src="cydia7.png"/><label>أضف للسيديا</label></a></li></ul></span>
-<span id="showAddRepo_" hidden><h2>سورس قروب - الجلبريك</h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mohdalyahri.github.io/"><img class="icon" src="cydia7.png"/><label>أضف للسيديا</label></a></li></ul></span>
+<span id="showAddRepo_" hidden><h2>سورس قروب - الجلبريك</h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mohdalyahri.github.io"><img class="icon" src="cydia7.png"/>&emsp;<label>أضف للسيديا</label></a></li></ul></span>
 <p style="text-align:center;" id="showAddRepoUrl_" hidden>Repo: https://mohdalyahri.github.io/</p>
 <span id="tweakStatusInfo"><h2></h2><ul style="background:#c6e8ff"><center><li><p id="errorInfo">جاري تحميل الوصف ...</p></li></center></ul></span>
 <span id="desc_short_" hidden><h2 id="name" hidden></h2><ul style="background:#c6e8ff"><center><li><p id="desc_short"></p></li></center></ul></span>
@@ -26,7 +25,7 @@
 			<img class="icon" src="telegram.png"/>
 			&emsp;<label>قروب - الجليبريك</label>
 		</a>
-	</li>
+	</li>	
 	<li>
 		<a href="https://twitter.com/mohdalyahri" target="_blank">
 			<img class="icon" src="twitter.png"/>
