--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <h2> للإضافة السريعة ..</h2>
 <ul>
 	<li>
-		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://.github.io/">
+		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mohdalyahri.github.io">
 			<img class="icon" src="cydia7.png"/>
-			&emsp;<label>إضف للسيديا</label>
+			&emsp;<label>أضف للسيديا</label>
 		</a>
 	</li>
 </ul>
 <p style="text-align:center;">اعزائي اعضاء المجموعة السورس الى الان مازال تحت التجربة نرجو عدم استخدامه كمرجع اساسي</p>
-
+<p style="padding-bottom: 500px"> </p>
 <h2>تجدنا هنا .. </h2>
 <ul>
     <li>
@@ -26,7 +26,7 @@
 			<img class="icon" src="telegram.png"/>
 			&emsp;<label>قروب - الجليبريك</label>
 		</a>
-	</li>
+	</li>	
 	<li>
 		<a href="https://twitter.com/mohdalyahri" target="_blank">
 			<img class="icon" src="twitter.png"/>
@@ -38,7 +38,7 @@
 			<img class="icon" src="pp.png"/>
 			&emsp;<label>تبرع لنا</label>
 		</a>
-	</li>
+	</li>	  
 </ul>
 <p style="text-align:center;">نعمل بحب من اجلكم ❤️ © 2018</p>
 </body></html>
