--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<li>
 		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mohdalyahri.github.io">
 			<img class="icon" src="cydia7.png"/>
-			&emsp;<label>أضف للسيديا</label>
+			&emsp;<label>ضيف ع السريع لاتضيع وقت</label>
 		</a>
 	</li>
 </ul>
@@ -36,9 +36,9 @@
 	<li>
 		<a href="https://www.paypal.me/MohdAlyahri" target="_blank">
 			<img class="icon" src="pp.png"/>
-			&emsp;<label>تبرع لنا</label>
+			&emsp;<label>اعدمنا لاستمرار الموقع</label>
 		</a>
 	</li>	  
 </ul>
-<p style="text-align:center;">نعمل بحب من اجلكم ❤️ © 2018</p>
+<p style="text-align:center;">نعمل بحب من اجلكم ❤️</p>
 </body></html>
