--- a/description.html
+++ b/description.html
@@ -11,7 +11,7 @@
 <span id="showAddRepo_" hidden><h2>سورس قروب - الجلبريك</h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mohdalyahri.github.io"><img class="icon" src="cydia7.png"/>&emsp;<label>أضف للسيديا</label></a></li></ul></span>
 <p style="text-align:center;" id="showAddRepoUrl_" hidden>Repo: https://mohdalyahri.github.io</p>
 <span id="tweakStatusInfo"><h2></h2><ul style="background:#c6e8ff"><center><li><p id="errorInfo">جاري تحميل الوصف ...</p></li></center></ul></span>
-<span id="compatitle_" hidden><ul style="background:#00ff24"><center><li><p>متوافق مع <span id="compatitle"></span></p></li></center></ul></span>
+<span id="compatitle_" hidden><ul style="background:#00ff24"><center><li><p>متوافقة مع <span id="compatitle"></span></p></li></center></ul></span>
 <p style="text-align:center;font-size:10px;" id="compatitle_"><span id="your_ios" hidden></span></p>
 <span id="warning_" hidden><ul style="background:#ffff80"><center><li><p><span id="warning"></span></p></li></center></ul></span>
 <span id="desc_short_" hidden><h2 id="name" hidden></h2><ul style="background:#c6e8ff"><center><li><p id="desc_short"></p></li></center></ul></span>
